// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationBar /> component should match snapshot with active chapter 2 1`] = `
<DocumentFragment>
  <div
    class="nav-background"
    id="navigation-bar"
  >
    <div
      class="nav-container"
    >
      <a
        class="logo"
        href="http://www.bible.is"
        rel="noopener"
        title="http://www.bible.is"
      >
        <svg
          class="svg"
          fill=""
        >
          <use
            xlink:href="/dark_theme_logo.svg#bible.is_logo"
          />
        </svg>
      </a>
      <div
        class="version"
        id="version-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="version-text"
          title="English Standard Version"
        >
          ESV - English Standard Version
        </h1>
      </div>
      <div
        class="book-chapter"
        id="chapter-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="book-chapter-text"
          title="Matthew 2"
        >
          Matthew 2
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<NavigationBar /> component should match snapshot with active chapter 2 and chapter selection active 1`] = `
<DocumentFragment>
  <div
    class="nav-background"
    id="navigation-bar"
  >
    <div
      class="nav-container"
    >
      <a
        class="logo"
        href="http://www.bible.is"
        rel="noopener"
        title="http://www.bible.is"
      >
        <svg
          class="svg"
          fill=""
        >
          <use
            xlink:href="/dark_theme_logo.svg#bible.is_logo"
          />
        </svg>
      </a>
      <div
        class="version"
        id="version-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="version-text"
          title="English Standard Version"
        >
          ESV - English Standard Version
        </h1>
      </div>
      <div
        class="book-chapter"
        id="chapter-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="book-chapter-text"
          title="Matthew 2"
        >
          Matthew 2
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<NavigationBar /> component should match snapshot with chapter selection active 1`] = `
<DocumentFragment>
  <div
    class="nav-background"
    id="navigation-bar"
  >
    <div
      class="nav-container"
    >
      <a
        class="logo"
        href="http://www.bible.is"
        rel="noopener"
        title="http://www.bible.is"
      >
        <svg
          class="svg"
          fill=""
        >
          <use
            xlink:href="/dark_theme_logo.svg#bible.is_logo"
          />
        </svg>
      </a>
      <div
        class="version"
        id="version-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="version-text"
          title="English Standard Version"
        >
          ESV - English Standard Version
        </h1>
      </div>
      <div
        class="book-chapter"
        id="chapter-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="book-chapter-text"
          title="Matthew 1"
        >
          Matthew 1
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<NavigationBar /> component should match snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="nav-background"
    id="navigation-bar"
  >
    <div
      class="nav-container"
    >
      <a
        class="logo"
        href="http://www.bible.is"
        rel="noopener"
        title="http://www.bible.is"
      >
        <svg
          class="svg"
          fill=""
        >
          <use
            xlink:href="/dark_theme_logo.svg#bible.is_logo"
          />
        </svg>
      </a>
      <div
        class="version"
        id="version-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="version-text"
          title="English Standard Version"
        >
          ESV - English Standard Version
        </h1>
      </div>
      <div
        class="book-chapter"
        id="chapter-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="book-chapter-text"
          title="Matthew 1"
        >
          Matthew 1
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<NavigationBar /> component should match snapshot with ms as the user agent 1`] = `
<DocumentFragment>
  <div
    class="nav-background"
    id="navigation-bar"
  >
    <div
      class="nav-container"
    >
      <a
        class="logo"
        href="http://www.bible.is"
        rel="noopener"
        title="http://www.bible.is"
      >
        <svg
          class="svg"
          fill="#fff"
        >
          <use
            xlink:href="/dark_theme_logo.svg#bible.is_logo"
          />
        </svg>
      </a>
      <div
        class="version"
        id="version-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="version-text"
          title="English Standard Version"
        >
          ESV - English Standard Version
        </h1>
      </div>
      <div
        class="book-chapter"
        id="chapter-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="book-chapter-text"
          title="Matthew 1"
        >
          Matthew 1
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<NavigationBar /> component should match snapshot with paper theme 1`] = `
<DocumentFragment>
  <div
    class="nav-background"
    id="navigation-bar"
  >
    <div
      class="nav-container"
    >
      <a
        class="logo"
        href="http://www.bible.is"
        rel="noopener"
        title="http://www.bible.is"
      >
        <svg
          class="svg"
        >
          <use
            xlink:href="/light_theme_logo.svg#bible.is_logo_light"
          />
        </svg>
      </a>
      <div
        class="version"
        id="version-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="version-text"
          title="English Standard Version"
        >
          ESV - English Standard Version
        </h1>
      </div>
      <div
        class="book-chapter"
        id="chapter-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="book-chapter-text"
          title="Matthew 1"
        >
          Matthew 1
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<NavigationBar /> component should match snapshot with paper theme and ms as the user agent 1`] = `
<DocumentFragment>
  <div
    class="nav-background"
    id="navigation-bar"
  >
    <div
      class="nav-container"
    >
      <a
        class="logo"
        href="http://www.bible.is"
        rel="noopener"
        title="http://www.bible.is"
      >
        <svg
          class="svg"
          fill="#fff"
        >
          <use
            xlink:href="/dark_theme_logo.svg#bible.is_logo"
          />
        </svg>
      </a>
      <div
        class="version"
        id="version-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="version-text"
          title="English Standard Version"
        >
          ESV - English Standard Version
        </h1>
      </div>
      <div
        class="book-chapter"
        id="chapter-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="book-chapter-text"
          title="Matthew 1"
        >
          Matthew 1
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<NavigationBar /> component should match snapshot with rtl text direction 1`] = `
<DocumentFragment>
  <div
    class="nav-background"
    id="navigation-bar"
  >
    <div
      class="nav-container"
    >
      <a
        class="logo"
        href="http://www.bible.is"
        rel="noopener"
        title="http://www.bible.is"
      >
        <svg
          class="svg"
          fill=""
        >
          <use
            xlink:href="/dark_theme_logo.svg#bible.is_logo"
          />
        </svg>
      </a>
      <div
        class="version"
        id="version-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="version-text"
          title="English Standard Version"
        >
          ESV - English Standard Version
        </h1>
      </div>
      <div
        class="book-chapter"
        id="chapter-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="book-chapter-text rtl"
          title="Matthew 1"
        >
          Matthew 1
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<NavigationBar /> component should match snapshot with rtl text direction and ms as the user agent 1`] = `
<DocumentFragment>
  <div
    class="nav-background"
    id="navigation-bar"
  >
    <div
      class="nav-container"
    >
      <a
        class="logo"
        href="http://www.bible.is"
        rel="noopener"
        title="http://www.bible.is"
      >
        <svg
          class="svg"
          fill="#fff"
        >
          <use
            xlink:href="/dark_theme_logo.svg#bible.is_logo"
          />
        </svg>
      </a>
      <div
        class="version"
        id="version-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="version-text"
          title="English Standard Version"
        >
          ESV - English Standard Version
        </h1>
      </div>
      <div
        class="book-chapter"
        id="chapter-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="book-chapter-text rtl"
          title="Matthew 1"
        >
          Matthew 1
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<NavigationBar /> component should match snapshot with rtl text direction and paper theme 1`] = `
<DocumentFragment>
  <div
    class="nav-background"
    id="navigation-bar"
  >
    <div
      class="nav-container"
    >
      <a
        class="logo"
        href="http://www.bible.is"
        rel="noopener"
        title="http://www.bible.is"
      >
        <svg
          class="svg"
        >
          <use
            xlink:href="/light_theme_logo.svg#bible.is_logo_light"
          />
        </svg>
      </a>
      <div
        class="version"
        id="version-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="version-text"
          title="English Standard Version"
        >
          ESV - English Standard Version
        </h1>
      </div>
      <div
        class="book-chapter"
        id="chapter-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="book-chapter-text rtl"
          title="Matthew 1"
        >
          Matthew 1
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<NavigationBar /> component should match snapshot with rtl text direction, paper theme, and ms as the user agent 1`] = `
<DocumentFragment>
  <div
    class="nav-background"
    id="navigation-bar"
  >
    <div
      class="nav-container"
    >
      <a
        class="logo"
        href="http://www.bible.is"
        rel="noopener"
        title="http://www.bible.is"
      >
        <svg
          class="svg"
          fill="#fff"
        >
          <use
            xlink:href="/dark_theme_logo.svg#bible.is_logo"
          />
        </svg>
      </a>
      <div
        class="version"
        id="version-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="version-text"
          title="English Standard Version"
        >
          ESV - English Standard Version
        </h1>
      </div>
      <div
        class="book-chapter"
        id="chapter-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="book-chapter-text rtl"
          title="Matthew 1"
        >
          Matthew 1
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<NavigationBar /> component should match snapshot with version selection active 1`] = `
<DocumentFragment>
  <div
    class="nav-background"
    id="navigation-bar"
  >
    <div
      class="nav-container"
    >
      <a
        class="logo"
        href="http://www.bible.is"
        rel="noopener"
        title="http://www.bible.is"
      >
        <svg
          class="svg"
          fill=""
        >
          <use
            xlink:href="/dark_theme_logo.svg#bible.is_logo"
          />
        </svg>
      </a>
      <div
        class="version"
        id="version-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="version-text"
          title="English Standard Version"
        >
          ESV - English Standard Version
        </h1>
      </div>
      <div
        class="book-chapter"
        id="chapter-dropdown-button"
      >
        <svg
          class="svg icon"
          fill="#fff"
          opacity=".5"
        >
          <use
            xlink:href="/svglist.svg#arrow_down"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <h1
          class="book-chapter-text"
          title="Matthew 1"
        >
          Matthew 1
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
